--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <style>
         body {
             background: rgb(96, 92, 92);
-            font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+            font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            text-align: center;
         }
     </style>
 </head>
