Change the front size of the name

--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
             padding: 50px;
         }
 
-        h1, h2 {           
+        h1 {
+            font-size: 2.5rem;
+            background: linear-gradient(90deg, #6a5acd, #48b1f3);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+
+        h2 {           
             background: linear-gradient(90deg, #6a5acd, #48b1f3);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
@@ -23,8 +30,8 @@
 
 
         img {
-            width: 200px;
-            border-radius: 50%;
+            width: 280px;
+            border-radius: 60%;
             margin-top: 20px;
         }
 
@@ -55,7 +62,7 @@
     <img src="assets/image1.jpg" alt="Bingying's Photo">
 
     <header>
-        <h1>Welcome to my personal website</h1>
+        <h2>Welcome to my personal website</h2>
         <ul>
             <li><a href="#about">about me</a></li>
             <li><a href="#CV">CV</a></li>
