Connect to actual CV pdf file after clicking on CV
Created a cv.html file and put my resume in assets folder.

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <h2>Welcome to my personal website</h2>
         <ul>
             <li><a href="#about">about me</a></li>
-            <li><a href="#CV">CV</a></li>
+            <li><a href="cv.html">CV</a></li>
             <li><a href="#projects">projects</a></li>
             <li><a href="#contact">contact</a></li>
         </ul>
