--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bingying's Web Page</title>
+    <link rel="stylesheet" href="styles.css">
     <style>
         body {
             /*background: rgb(47, 46, 46);*/
@@ -13,14 +14,6 @@
             text-align: center;
             padding: 50px;
             background-color: #1e1e2f;
-        }
-
-        #particles-js {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            background-color: #1e1e2f; /* a darker color background */
-            z-index: -1; /* make sure particles are behind those contents */
         }
 
         h1 {
@@ -128,7 +121,7 @@
                     }
                 },
                 "interactivity": {
-                    "detect_on": "canvas",
+                    "detect_on": "window",
                     "events": {
                         "onhover": {
                             "enable": true,
