Updated about me page
Photo: Becomes a rectangle with slightly rounded corners or no rounded corners at all.

Hobbies & Interests: Remove the dot before the list for simplicity.

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <header>
         <h2>Welcome to my personal website</h2>
         <ul>
-            <li><a href="#about">about me</a></li>
+            <li><a href="about.html">about me</a></li>
             <li><a href="cv.html">CV</a></li>
             <li><a href="#projects">projects</a></li>
             <!-- <li><a href="#contact">contact</a></li> -->
@@ -125,6 +125,7 @@
             <p>Address: Kahlert School of Computing, Salt Lake City, UT</p>
             <p>Email: wangbingying3@gmail.com</p>
             <p>LinkedIn: <a href="https://www.linkedin.com/in/bingying-wang3/" target="_blank">View Profile</a></p>
+            <p>GitHub: <a href="https://github.com/berylchen3" target="_blank">View Profile</a></p>
             <button onclick="closeModal()">Close</button>
         </div>
         <!-- <nav>
