Add a time line in about me page

--- a/about.html
+++ b/about.html
@@ -59,11 +59,37 @@
     <p>When I'm not coding, I enjoy exploring new places, watching movies, and chatting with friends.</p>
     <p>Now I am learing front-end skills and trying to develop different websites.</p>
 
+    <h2>My Journey</h2>
+    <div class="timeline">
+        <div class="timeline-item">
+            <div class="timeline-date">August 2021</div>
+            <div class="timeline-content">Enrolled at the University of Utah</div>
+        </div>
+        <div class="timeline-item">
+            <div class="timeline-date">2022</div>
+            <div class="timeline-content">Started studying Computer Science</div>
+        </div>
+        <div class="timeline-item">
+            <div class="timeline-date">August 2023</div>
+            <div class="timeline-content">Became a Teaching Assistant (TA) for the first time</div>
+        </div>
+        <div class="timeline-item">
+            <div class="timeline-date">Fall 2023 & Spring 2024</div>
+            <div class="timeline-content">Taught CS1420 and CS2420 courses</div>
+        </div>
+        <div class="timeline-item">
+            <div class="timeline-date">May 2024</div>
+            <div class="timeline-content">Started as a Research Assistant in cybersecurity, working on the CHPC Security project</div>
+        </div>
+    </div>
+
     <h2>Hobbies & Interests</h2>
     <ul>
         <li>Drawing</li>
         <li>Coding</li>
     </ul>
+
+    <p>Still working on this page...</p>
 
     <a href="index.html">Back to Home</a> <!--Link back to HomePage-->
 </body>
