Correct a typo in about.html

--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
     <img src="assets/image2.jpg" alt="My Photo" class="about-photo">
     <p>Hi, I'm Bingying Wang, a Junior Computer Science student at the University of Utah. I have a passion for coding, problem-solving, and creating impactful projects.</p>
     <p>When I'm not coding, I enjoy exploring new places, watching movies, and chatting with friends.</p>
-    <p>Now I am learing front-end skills and trying to develop different websites.</p>
+    <p>Now I am learning front-end skills and trying to develop different websites.</p>
 
     <h2>My Journey</h2>
     <div class="timeline">
