--- a/index.html
+++ b/index.html
@@ -17,14 +17,31 @@
         }
 
         h1 {
-            font-size: 2.5rem;
-            background: linear-gradient(90deg, #6a5acd, #48b1f3);
+            font-size: 3rem;
+            background: linear-gradient(135deg, #1e90ff, #ff69b4);
+            background-size: 200% 200%;
+            animation: gradient-animation 5s infinite;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
 
+        @keyframes gradient-animation {
+            0% {
+                background-position: 0% 50%;
+            }
+            50% {
+                background-position: 100% 50%;
+            }
+            100% {
+                background-position: 0% 50%;
+            }
+        }
+
         h2 {           
-            background: linear-gradient(90deg, #6a5acd, #48b1f3);
+            /*background: linear-gradient(135deg, #ff4500, #32cd32);*/
+            background: linear-gradient(135deg, #ff7f50, #6495ed);
+            background-size: 200% 200%;
+            animation: gradient-animation 5s infinite;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
