Started working on projects.html
Updated content in about me page.
Created projects.html and basically accomplished projects display.

--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
         </div>
         <div class="timeline-item">
             <div class="timeline-date">May 2024</div>
-            <div class="timeline-content">Started as a Research Assistant (RA) in cybersecurity, working on the CHPC Security project</div>
+            <div class="timeline-content">Started as a Research Assistant (RA) at University of Utah, working on the CHPC Security project</div>
         </div>
     </div>
 
