--- a/index.html
+++ b/index.html
@@ -130,8 +130,7 @@
         <ul>
             <li><a href="about.html">about me</a></li>
             <li><a href="cv.html">CV</a></li>
-            <li><a href="#projects">projects</a></li>
-            <!-- <li><a href="#contact">contact</a></li> -->
+            <li><a href="projects.html">projects</a></li>
             <li><a href="javascript:void(0);" onclick="showModal()">contact</a></li>
         </ul>
         <p>This website is still in progress! Please wait...</p>
