--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         #contact-modal button {
             margin-top: 10px;
             padding: 10px 20px;
-            background-color: #6a5acd;
+            background-color: #4633c1;
             color: white;
             border: none;
             border-radius: 5px;
@@ -133,7 +133,7 @@
             <li><a href="projects.html">projects</a></li>
             <li><a href="javascript:void(0);" onclick="showModal()">contact</a></li>
         </ul>
-        <p>This website is still in progress! Please wait...</p>
+        <!-- <p>This website is still in progress! Please wait...</p> -->
 
         <div id="modal-overlay" onclick="closeModal()"></div>
         <div id="contact-modal">
