Move some code from projects.html to script.js and styles.css

--- a/projects.html
+++ b/projects.html
@@ -154,15 +154,7 @@
         </div>
     </div>
 
-    <script src="script.js">
-        function showModal(projectId) {
-            document.getElementById(`${projectId}-modal`).style.display = 'block';
-        }
-
-        function closeModal(projectId) {
-            document.getElementById(`${projectId}-modal`).style.display = 'none';
-        }
-    </script>
+    <script src="script.js"></script>
 
     <a href="index.html">Back to Home</a> <!--Link back to HomePage-->
 </body>
