--- a/projects.html
+++ b/projects.html
@@ -141,6 +141,14 @@
             <span class="close" onclick="closeModal('sprite-editor')">&times;</span>
             <h2>Sprite Editor</h2>
             <p>A sprite editor tool built using Qt and C++ for game development. </p>
+            <button class="modal-button" onclick="showVideo()">Watch Video</button>
+            <!-- Hidden video container -->
+            <div id="video-container" style="display: none; margin-top: 20px;">
+                <video width="100%" controls>
+                    <source src="assets/sprite-editor-demo.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
         </div>
     </div>
 
