--- a/cv.html
+++ b/cv.html
@@ -9,6 +9,6 @@
 <body>
     <h2>My CV</h2>
     <embed src="assets/my-cv.pdf" width="100%" height="600px">
-    <a href="index.html">Back to Home</a>
+    <a href="index.html" class="back-to-home">Back to Home</a>
 </body>
 </html>
