Update colors to make color theme consistent

--- a/about.html
+++ b/about.html
@@ -9,14 +9,18 @@
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             text-align: center;
-            background-color: #f4f4f4;
-            color: #333;
+            background-color: #1e1e2f;
+            color: #bca9d3;
             padding: 20px;
         }
 
         h1 {
             font-size: 2.5rem;
             color: #6a5acd;
+        }
+
+        h2{
+            color: #c87be2;
         }
 
         ul {
