--- a/cv.html
+++ b/cv.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My CV</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        body{
+            background-color: #1e1e2f;
+        }
+
+        h2{
+            color: #c87be2;
+        }
+    </style>
 </head>
 <body>
     <h2>My CV</h2>
