--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            background: white;
+            background: rgb(216, 213, 246);
             color: black;
             padding: 20px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
