--- a/projects.html
+++ b/projects.html
@@ -19,6 +19,18 @@
             margin-bottom: 20px;
         }
 
+        a {
+            display: inline-block;
+            margin-top: 20px;
+            text-decoration: none;
+            color: #6a5acd;
+            font-size: 1.2rem;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+
         .project-card {
             position: relative;
             display: inline-block;
