--- a/projects.html
+++ b/projects.html
@@ -126,6 +126,11 @@
         .modal-button:hover {
             background-color: #82c5ee;
         }
+
+        p {
+            font-size: 1.2rem;
+            color: #cccccc;
+        }
     </style>
 </head>
 <body>
@@ -175,6 +180,8 @@
     </div>
 
     <script src="script.js"></script>
+
+    <p>More projects are coming...</p>
 
     <a href="index.html">Back to Home</a> <!--Link back to HomePage-->
 </body>
