Change the color of the content in projects.html

--- a/projects.html
+++ b/projects.html
@@ -129,7 +129,7 @@
 
         p {
             font-size: 1.2rem;
-            color: #cccccc;
+            color: #443c75;
         }
     </style>
 </head>
