Add GitHub and LinkedIn social icons to homepage with hover effect

--- a/index.html
+++ b/index.html
@@ -144,6 +144,15 @@
             <p>GitHub: <a href="https://github.com/berylchen3" target="_blank">View Profile</a></p>
             <button onclick="closeModal()">Close</button>
         </div>
+
+        <div class="social-icons">
+            <a href="https://github.com/berylchen3" target="_blank">
+                <img src="assets/github-icon.png" alt="GitHub">
+            </a>
+            <a href="https://www.linkedin.com/in/bingying-wang3/" target="_blank" class="linkedin">
+                <img src="assets/linkedin-icon.png" alt="LinkedIn">
+            </a>
+        </div>
         <!-- <nav>
             <a href="#about">about me</a><br>
             <a href="#projects">projects</a><br>
