Add teammate names on Sprite Editor Project

--- a/projects.html
+++ b/projects.html
@@ -158,6 +158,8 @@
             <span class="close" onclick="closeModal('sprite-editor')">&times;</span>
             <h2>Sprite Editor</h2>
             <p>A sprite editor tool built using Qt and C++ for game development. </p>
+            <p>This is a group project and my awesome team members are:</p>
+            <p>EDEN PARISH, ISAAC KOIZUMI, NATE FIERRO, ETHAN NGUYEN, MUNKH-ORGIL PUREVDORJ</p>
             <button class="modal-button" onclick="showVideo()">Watch Video</button>
             <!-- Hidden video container -->
             <div id="video-container" style="display: none; margin-top: 20px;">
