Add Skills Logos and Tools Logos in about me page

--- a/about.html
+++ b/about.html
@@ -87,11 +87,33 @@
         </div>
     </div>
 
-    <h2>Hobbies & Interests</h2>
+    <h2>Skills</h2>
+    <div class="skills-section">
+        <div class="category">
+            <h3>Programming Languages</h3>
+            <div class="icons">
+                <img src="assets/icons/python.png" alt="Python" class="python-logo">
+                <img src="assets/icons/cpp.png" alt="C++">
+                <img src="assets/icons/java.png" alt="Java">
+                <img src="assets/icons/javascript.png" alt="JavaScript">
+            </div>
+        </div>
+        <div class="category">
+            <h3>Developer Tools</h3>
+            <div class="icons">
+                <img src="assets/icons/git.png" alt="Git">
+                <img src="assets/icons/docker.png" alt="Docker">
+                <img src="assets/icons/VisualStudioCode.png" alt="Visual Studio Code">
+                <img src="assets/icons/WordPress.png" alt="WordPress">
+            </div>
+        </div>
+    </div>
+
+    <!-- <h2>Hobbies & Interests</h2>
     <ul>
         <li>Drawing</li>
         <li>Coding</li>
-    </ul>
+    </ul> -->
 
     <p>Still working on this page...</p>
 
