--- a/cv.html
+++ b/cv.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <style>
         body{
-            background-color: #1e1e2f;
+            background-color: #ffffff;
         }
 
         h2{
